clang/test/BSC/Negative/Ownership/Borrow/borrow_call_arg/borrow_call_arg.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct Rc<T> {
};

_Owned struct Weak<T> {
};

Weak<T> Weak<T>::new(const Rc<T> *_Borrow rc); // expected-note {{passing argument to parameter 'rc' here}}

_Owned struct S { 
};

void test(Rc<S> rc) {
    Weak<int> wk1 = Weak<int>::new(&_Const rc); // expected-error {{incompatible _Borrow types, cannot cast 'const _Owned Rc<_Owned struct S> *_Borrow' to 'const _Owned Rc<int> *_Borrow'}}
}
